Update pages and links to consider redirects

--- a/src/to_pajek.ipynb
+++ b/src/to_pajek.ipynb
@@ -47,7 +47,7 @@
     "mapper = dict()\n",
     "for id in sorted(list(map(lambda id: int(id), data.keys()))):\n",
     "    mapper[id_to_title_map[str(id)]] = count\n",
-    "    pajek_lines.append(str(count) + \" \\\"\" + id_to_title_map[str(id)] + \"\\\"\")\n",
+    "    pajek_lines.append(str(count) + \" \\\"\" + id_to_title_map[str(id)].replace('\\\"', '') + \"\\\"\")\n",
     "    count += 1\n",
     "\n",
     "pajek_lines.append(\"*Arcs\")\n",
@@ -67,7 +67,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(os.path.join(\"..\", \"data\", \"wikilinks.net\"), 'w') as f:\n",
+    "with open(os.path.join(\"..\", \"data\", \"wikilinks.net\"), 'w', encoding='utf8') as f:\n",
+    "    f.write('\\n'.join(pajek_lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pajek_lines = []\n",
+    "pajek_lines.append(\"*Vertices \" + str(len(data.keys())))\n",
+    "\n",
+    "count = 1\n",
+    "mapper = dict()\n",
+    "for id in sorted(list(map(lambda id: int(id), data.keys()))):\n",
+    "    mapper[str(id)] = count\n",
+    "    pajek_lines.append(str(count) + \" \\\"\" + str(id) + \"\\\"\")\n",
+    "    count += 1\n",
+    "\n",
+    "pajek_lines.append(\"*Arcs\")\n",
+    "weight = 1\n",
+    "for id in sorted(list(map(lambda id: int(id), data.keys()))):\n",
+    "    links = data[str(id)]\n",
+    "\n",
+    "    left = mapper[str(id)]\n",
+    "    for link in links:\n",
+    "        right = mapper[str(link)]\n",
+    "        pajek_lines.append(str(left) + \" \" + str(right) + \" \" + str(weight))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"..\", \"data\", \"wikilinks_ids.net\"), 'w', encoding='utf8') as f:\n",
     "    f.write('\\n'.join(pajek_lines))"
    ]
   },
