--- a/src/handle_redirects.ipynb
+++ b/src/handle_redirects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,16 @@
     "\n",
     "        data[str(redirect_map[id])] = all_links\n",
     "        del data[id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"..\", \"data\", 'wikilinks.json'), 'w') as f:\n",
+    "    json.dump(data, f)"
    ]
   }
  ],
